deployments/media/qbittorrent/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  selector:
    app: qbittorrent
  ports:
    - port: 8080
      targetPort: 8080
      name: qbit-web
    - port: 8888
      targetPort: 8888
      name: http-proxy
